Fix spacing for fourths

--- a/css/smartthings.css
+++ b/css/smartthings.css
@@ -248,14 +248,13 @@ box-shadow: 1px 1px 3px #000;
   width: 100%;
   float: left;
   box-sizing: border-box;
-    margin-left: 4%; 
   }
 
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
   .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
+  .four.columns                   { width: 32.6666666667%; }
   .five.columns                   { width: 39.3333333333%; }
   .six.columns                    { width: 48%;            }
   .seven.columns                  { width: 56.6666666667%; }
